# notes-app

./: README.md
.github/workflows/: deploy.yml
backend/: Cargo.toml  Dockerfile
backend/.github/workflows/: deploy.yml
backend/src/: main.rs  models.rs  state.rs
backend/src/routes/: mod.rs  notes.rs
frontend/: .env.production  package-lock.json  package.json
frontend/src/: App.jsx
