[package]
name = "notes-app"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
dotenv = "0.15.0"
futures = "0.3.32"
mongodb = "3.5.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.51.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }
